--- a/GE.WebUI/less/bootstrap-ext.less
+++ b/GE.WebUI/less/bootstrap-ext.less
@@ -8,6 +8,10 @@ a{
     outline: none !important;
 }
 
+.btn-default{
+    text-shadow:none;
+}
+
 .navbar{
     margin-bottom:0;
     border-radius: 0;
