--- a/GE.WebUI/less/share-buttons.less
+++ b/GE.WebUI/less/share-buttons.less
@@ -39,6 +39,7 @@
     font-style: normal;
     position: relative;
     padding-left: @p;
+    background-image:none;
 }
 
 .share-buttons > li > button, .share-buttons > li > button:focus, .share-buttons > li > button:active {
