--- a/GE.WebUI/less/video.less
+++ b/GE.WebUI/less/video.less
@@ -55,7 +55,7 @@
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        height: 150px;
+        height: 0;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
