--- a/GE.WebUI/Views/SiteTests/Details.cshtml
+++ b/GE.WebUI/Views/SiteTests/Details.cshtml
@@ -30,83 +30,83 @@
     </div>
     <br />
 
-        @section scripts{
-            <script src="~/content/dist/js/jquery.unobtrusive-ajax.min.js"></script>
-            <script src="~/content/dist/js/goodshare.min.js"></script>
-            <script>
-                var interval;
-                var lettersInSecond = 20;//1200 знаков в минуту
-                var secondCounter = 0;
-                $(function () {
-                    //guess
-                    $('#st-page').on('click', '.sx-indicator > span', function () {
-                        $span = $(this);
-                        $span.closest('.sx-indicator').prepend('<i class="fa fa-spinner fa-spin"></i>');
-                        var id = $span.closest('li').find('.sx-indicator-txt').attr('data-id');
-                        var isCorrect = $span.data('dir') == true;
+    @section scripts{
+        <script src="@Url.Action("Js", "StaticContent", new { name="jquery.unobtrusive-ajax"})"></script>
+        <script src="~/content/dist/js/goodshare.min.js"></script>
+        <script>
+            var interval;
+            var lettersInSecond = 20;//1200 знаков в минуту
+            var secondCounter = 0;
+            $(function () {
+                //guess
+                $('#st-page').on('click', '.sx-indicator > span', function () {
+                    $span = $(this);
+                    $span.closest('.sx-indicator').prepend('<i class="fa fa-spinner fa-spin"></i>');
+                    var id = $span.closest('li').find('.sx-indicator-txt').attr('data-id');
+                    var isCorrect = $span.data('dir') == true;
 
-                        $form = $span.closest('form');
-                        $input = $form.find('input[data-q-id="' + id + '"]')
-                        $input.val(isCorrect);
+                    $form = $span.closest('form');
+                    $input = $form.find('input[data-q-id="' + id + '"]')
+                    $input.val(isCorrect);
 
-                        $form.submit();
-                    });
-
-                    //normal
-                    $('#st-page').on('change', '.test-normal-q-list [type="radio"]', function () {
-                        $radio = $(this);
-                        var questionId = $radio.attr('id').replace('q-', '');
-                        $h4 = $('#st-page [data-subject-id]');
-                        $h4.prepend('<i class="fa fa-spinner fa-spin"></i>');
-                        var subjectId = $h4.attr('data-subject-id');
-                        $subject = $('#st-page .s [value="' + subjectId + '"]');
-                        var subjectIndex = $subject.attr('name').replace('.SubjectId', '');
-
-                        $('<input type="hidden" name="' + subjectIndex + '.QuestionId" value="' + questionId + '" />').insertAfter($subject);
-
-                        $form = $radio.closest('form');
-                        $form.submit();
-                    });
-
-                    $('#st-page').on('click', '.test-normal-q-list__dont-btn', function () {
-                        $h4 = $('#st-page [data-subject-id]');
-                        $h4.prepend('<i class="fa fa-spinner fa-spin"></i>');
-                    });
-
-                    setStepInterval();
+                    $form.submit();
                 });
 
-                function setStepInterval() {
-                    clearStepInterval();
-                    if (!continueStep) {
-                        $('.s-s').last().remove();
-                        return;
-                    }
+                //normal
+                $('#st-page').on('change', '.test-normal-q-list [type="radio"]', function () {
+                    $radio = $(this);
+                    var questionId = $radio.attr('id').replace('q-', '');
+                    $h4 = $('#st-page [data-subject-id]');
+                    $h4.prepend('<i class="fa fa-spinner fa-spin"></i>');
+                    var subjectId = $h4.attr('data-subject-id');
+                    $subject = $('#st-page .s [value="' + subjectId + '"]');
+                    var subjectIndex = $subject.attr('name').replace('.SubjectId', '');
 
-                    $subject = $('.s-s').last();
-                    $lettersCountInput = $subject.children('[name$="LettersCount"]');
-                    $goodReadInput = $subject.children('[name$="BallsGoodRead"]');
-                    $badReadInput = $subject.children('[name$="BallsBadRead"]');
+                    $('<input type="hidden" name="' + subjectIndex + '.QuestionId" value="' + questionId + '" />').insertAfter($subject);
 
-                    var secondsCount = parseInt(parseInt($lettersCountInput.val()) / lettersInSecond) * 3;
-                    $goodReadInput.val(secondsCount < 15 ? 15 : secondsCount);
-                    interval = setInterval(function () {
-                        secondCounter++;
+                    $form = $radio.closest('form');
+                    $form.submit();
+                });
 
-                        var ballsGoodRead = $goodReadInput.val();
-                        if (ballsGoodRead != 0)
-                            $goodReadInput.val(ballsGoodRead - 3);
-                        else
-                            $badReadInput.val($badReadInput.val() - 3);
-                    }, 1000);
+                $('#st-page').on('click', '.test-normal-q-list__dont-btn', function () {
+                    $h4 = $('#st-page [data-subject-id]');
+                    $h4.prepend('<i class="fa fa-spinner fa-spin"></i>');
+                });
+
+                setStepInterval();
+            });
+
+            function setStepInterval() {
+                clearStepInterval();
+                if (!continueStep) {
+                    $('.s-s').last().remove();
+                    return;
                 }
 
-                function clearStepInterval() {
-                    if (interval) {
-                        clearInterval(interval);
-                        secondCounter = 0;
-                    }
+                $subject = $('.s-s').last();
+                $lettersCountInput = $subject.children('[name$="LettersCount"]');
+                $goodReadInput = $subject.children('[name$="BallsGoodRead"]');
+                $badReadInput = $subject.children('[name$="BallsBadRead"]');
+
+                var secondsCount = parseInt(parseInt($lettersCountInput.val()) / lettersInSecond) * 3;
+                $goodReadInput.val(secondsCount < 15 ? 15 : secondsCount);
+                interval = setInterval(function () {
+                    secondCounter++;
+
+                    var ballsGoodRead = $goodReadInput.val();
+                    if (ballsGoodRead != 0)
+                        $goodReadInput.val(ballsGoodRead - 3);
+                    else
+                        $badReadInput.val($badReadInput.val() - 3);
+                }, 1000);
+            }
+
+            function clearStepInterval() {
+                if (interval) {
+                    clearInterval(interval);
+                    secondCounter = 0;
                 }
-            </script>
-        }
+            }
+        </script>
+    }
 }
