--- a/GE.WebUI/Views/Shared/_LikeMaterials.cshtml
+++ b/GE.WebUI/Views/Shared/_LikeMaterials.cshtml
@@ -5,7 +5,7 @@
     var colCount = 3;
     var rowsCount = (int)Math.Ceiling((decimal)Model.Length / colCount);
     SxVMMaterial item;
-    Enums.ModelCoreType mct = ViewBag.ModelCoreType;
+    byte mct = ViewBag.ModelCoreType;
 }
 
 @if (Model.Any())
