--- a/GE.WebUI/Areas/Admin/Views/Aphorisms/Index.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Aphorisms/Index.cshtml
@@ -27,7 +27,7 @@
 <div class="row">
     <div class="col-md-3">
         <h4 class="header">Категории</h4>
-        @Html.Action("TreeViewMenu", "MaterialCategories", new { mct = Enums.ModelCoreType.Aphorism })
+        @Html.Action("TreeViewMenu", "MaterialCategories", new { mct = 6/*aphorism*/ })
     </div>
     <div class="col-md-9">
         <div class="content">
