--- a/GE.WebUI/Views/Aphorisms/Details.cshtml
+++ b/GE.WebUI/Views/Aphorisms/Details.cshtml
@@ -36,7 +36,7 @@
             </blockquote>
             @Html.SxShareButtons(global_asax.ShareButtons)
 
-            @Html.Action("Edit", "Comments", new { mid = Model.Aphorism.Id, mct = Enums.ModelCoreType.Aphorism }))
+            @Html.Action("Edit", "Comments", new { mid = Model.Aphorism.Id, mct = 6/*aphorism*/ }))
 
             @*author*@
             @if (Model.TopForAuthor.Any())
@@ -69,7 +69,7 @@
     <script src="@Url.Action("Js", "StaticContent", new { name="jquery.validate.unobtrusive"})"></script>
     <script type="text/javascript">
         $(function () {
-            $('section[id^="comments-"]').load('/comments/list?mid=' +@Model.Aphorism.Id +'&mct=' + '@Enums.ModelCoreType.Aphorism');
+            $('section[id^="comments-"]').load('/comments/list?mid=' +@Model.Aphorism.Id +'&mct=6'/*aphorism*/);
         });
     </script>
 }
