--- a/GE.WebUI/Views/Games/DisplayTemplates/VMMaterial.cshtml
+++ b/GE.WebUI/Views/Games/DisplayTemplates/VMMaterial.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
     var hasVideo = Model.Videos.Any();
-    var isAphorism = Model.ModelCoreType == SX.WebCore.Enums.ModelCoreType.Aphorism;
+    var isAphorism = Model.ModelCoreType == 6/*aphorism*/;
 }
 <div class="dg-lm">
     <div class="row">
