--- a/GE.WebUI/less/pop-mat.less
+++ b/GE.WebUI/less/pop-mat.less
@@ -5,7 +5,12 @@
 
 .pop-mat{
     font-size:13px;
-    margin-bottom:@def-pad*2;
+    margin:@def-pad*2 0;
+    color:@color-white;
+}
+
+.pop-mat__header{
+    margin-bottom:@def-pad;
 }
 
 .pop-mat .row{
